fix text-wrap bug

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .preserve-newlines {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .problems-table {
